# hercode-zenline-hackathon

./: .env.example  ARCHITECTURE.md  CONTEXT.md  PIPELINE_DIAGRAM.md  PROJECT_SUMMARY_EN.md  README.md  SUBMISSION.md  api.py  app.py  diagram.md  draw_architecture.py  pyproject.toml
app/: .env.example  README.md  requirements.txt  streamlit_app.py
app/.streamlit/: config.toml
app/retail_radar/: schema.py
app/retail_radar/chat/: assistant.py
app/retail_radar/config/: coverage_keywords.json  market_aliases.json  personas.json  risk_taxonomy.json  sources.json
app/retail_radar/data/: recommendations.json  scenario_outdoor_boutique.json  scenario_outdoor_large_retailer.json  seed_signals.json  signals.csv
app/retail_radar/pipeline/: cleaner.py  collectors.py  dedup.py  leadlag.py  run_pipeline.py  scorer.py  synthesiser.py
app/retail_radar/resources/: README.md  fetch_reddit.py  scrape_targets.json
docs/: data-contract.md
docs/adr/: 0001-hybrid-scoring.md  0002-signal-detection-rules.md
frontend/: INTEGRATION.md  package-lock.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/lib/: api.ts  domain.ts  store.ts
frontend/src/routes/: __root.tsx  index.tsx  results.tsx
lovable/: PROMPT.md
lovable-version/: package.json
lovable-version/src/: routeTree.gen.ts
lovable-version/src/components/: AppShell.tsx
lovable-version/src/routes/: scraping.tsx
zenline_radar/: __init__.py  cli.py  context.py  filter.py  llm.py  mock_results.json  scorer.py  scraper.py
