[project]
name = "zenline-radar"
version = "0.1.0"
description = "Retail opportunity detection system"
authors = [
    {name = "Giulia Zobrist"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
